Responsive base and typography

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
               <i class="feature-box__icon icon-basic-world"></i>
               <h3 class="heading-tertiary">Explore the world</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores nihil veritatis, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores
+                nihil veritatis,
               </p>
             </div>
           </div>
@@ -102,7 +104,9 @@
               <i class="feature-box__icon icon-basic-compass"></i>
               <h3 class="heading-tertiary">Explore the world</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores nihil veritatis, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores
+                nihil veritatis,
               </p>
             </div>
           </div>
@@ -111,7 +115,9 @@
               <i class="feature-box__icon icon-basic-map"></i>
               <h3 class="heading-tertiary">Explore the world</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores nihil veritatis, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores
+                nihil veritatis,
               </p>
             </div>
           </div>
@@ -120,7 +126,9 @@
               <i class="feature-box__icon icon-basic-heart"></i>
               <h3 class="heading-tertiary">Explore the world</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores nihil veritatis, 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Dignissimos, nesciunt aliquam. Eligendi fugit minima qui dolores
+                nihil veritatis,
               </p>
             </div>
           </div>
